--- a/Index.html
+++ b/Index.html
@@ -356,9 +356,9 @@
         ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
-        const Database = iniSupabase();
-        let email_value
-        let password_value
+        // const Database = iniSupabase();
+        // let email_value
+        // let password_value
 
         let Urlaubstage_anzahl_niko = []
         let meinArray = []
@@ -374,23 +374,23 @@
 
         ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
-        function iniSupabase() {
-            const supabaseUrl = "https://hskeowlqxzmjfsaxwadj.supabase.co";
-            const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imhza2Vvd2xxeHptamZzYXh3YWRqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MjM5OTY4MTksImV4cCI6MjAzOTU3MjgxOX0.wus63Imorj_2Q8jJ9BiIHNTyv38-dYrOrHIs6ctYAH8";
-            const Database = supabase.createClient(supabaseUrl, supabaseKey)
-            return Database
-        }
+        // function iniSupabase() {
+        //     const supabaseUrl = "https://hskeowlqxzmjfsaxwadj.supabase.co";
+        //     const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imhza2Vvd2xxeHptamZzYXh3YWRqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MjM5OTY4MTksImV4cCI6MjAzOTU3MjgxOX0.wus63Imorj_2Q8jJ9BiIHNTyv38-dYrOrHIs6ctYAH8";
+        //     const Database = supabase.createClient(supabaseUrl, supabaseKey)
+        //     return Database
+        // }
 
         ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
-        async function signInWithEmail(Email_id, pw_id) {
-            const { data, error } = await Database.auth.signInWithPassword({
-                email: Email_id,
-                password: pw_id,
-            })
+        // async function signInWithEmail(Email_id, pw_id) {
+        //     const { data, error } = await Database.auth.signInWithPassword({
+        //         email: Email_id,
+        //         password: pw_id,
+        //     })
 
-            readDB()
-        }
+        //     readDB()
+        // }
 
         ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
