--- a/Index.html
+++ b/Index.html
@@ -404,6 +404,8 @@
 
         async function readDB() {
 
+            iniSupabase();
+            
             for (let Table_one = 0; Table_one < Table_all.length; Table_one++) {
 
                 const Datebank = Table_all[Table_one]
