--- a/Index.html
+++ b/Index.html
@@ -356,7 +356,7 @@
         ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
-        const Database = iniSupabase();
+        let Database = iniSupabase();
         let email_value
         let password_value
 
@@ -375,7 +375,7 @@
         ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         
         function Database_ini() {
-            const Database = iniSupabase();
+            let Database = iniSupabase();
             return Database
         }
 
