--- a/Login.html
+++ b/Login.html
@@ -9,7 +9,7 @@
 
     <script>
 
-        const Database = iniSupabase();
+        let Database = iniSupabase();
         let email_value
         let password_value
 
