--- a/Index.html
+++ b/Index.html
@@ -374,14 +374,6 @@
 
         ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         
-        function Database_ini() {
-            let Database = iniSupabase();
-            return Database
-        }
-
-        ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-
-
         function iniSupabase() {
             const supabaseUrl = "https://hskeowlqxzmjfsaxwadj.supabase.co";
             const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imhza2Vvd2xxeHptamZzYXh3YWRqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MjM5OTY4MTksImV4cCI6MjAzOTU3MjgxOX0.wus63Imorj_2Q8jJ9BiIHNTyv38-dYrOrHIs6ctYAH8";
@@ -391,14 +383,14 @@
 
         ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
-        // async function signInWithEmail(Email_id, pw_id) {
-        //     const { data, error } = await Database.auth.signInWithPassword({
-        //         email: Email_id,
-        //         password: pw_id,
-        //     })
+        async function signInWithEmail(Email_id, pw_id) {
+            const { data, error } = await Database.auth.signInWithPassword({
+                email: Email_id,
+                password: pw_id,
+            })
 
-        //     readDB()
-        // }
+            readDB()
+        }
 
         ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
@@ -411,7 +403,6 @@
         ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
         async function readDB() {
-            Database = Database_ini();
 
             for (let Table_one = 0; Table_one < Table_all.length; Table_one++) {
 
