--- a/Login.html
+++ b/Login.html
@@ -30,7 +30,8 @@
                 password: pw_id,
             })
             readDB() ;
-            window.open('Index.html', '_blank');
+            // window.open('Index.html', '_blank');
+            window.location.href = "Index.html";
 
         }
 
