--- a/Login.html
+++ b/Login.html
@@ -138,7 +138,7 @@
 
 <body>
     <div class="login-container">
-        <!-- <img src="bilder\n_pic.png" alt="Logo" class="profile-image"> -->
+        <img src="android-chrome-256x256.png" alt="favicon" class="logo">
         <form>
             <input id="emaiL_Input" type="email" placeholder="Email" required>
             <input id="pw_Input" type="password" placeholder="Passwort" required
