--- a/Login.html
+++ b/Login.html
@@ -138,7 +138,7 @@
 
 <body>
     <div class="login-container">
-        <img src="android-chrome-256x256.png" alt="favicon" class="logo">
+        <img src="android-chrome-256x256.png" alt="favicon" class="logo" style="width: 80px; height: 80px;">
         <form>
             <input id="emaiL_Input" type="email" placeholder="Email" required>
             <input id="pw_Input" type="password" placeholder="Passwort" required
