--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nikos Kalender</title>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+
 
     <style>
         body {
