--- a/Index.html
+++ b/Index.html
@@ -787,10 +787,11 @@
                 <h1>Nikos Kalender</h1>
             </div>
 
-
+<!-- <option value="2024">2024</option> -->
+            
             <div class="Jahresauswahl">
                 <Select id="year_select" onchange="readDB()" class="option">
-                    <option value="2024">2024</option>
+                    
                     <option value="2025">2025</option>
                     <option value="2026">2026</option>
                     <option value="2027">2027</option>
