Niko Urlaubstage 82 eingetragen

--- a/Index.html
+++ b/Index.html
@@ -375,7 +375,7 @@
         ];
 
         ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-        
+
         function iniSupabase() {
             const supabaseUrl = "https://hskeowlqxzmjfsaxwadj.supabase.co";
             const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imhza2Vvd2xxeHptamZzYXh3YWRqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MjM5OTY4MTksImV4cCI6MjAzOTU3MjgxOX0.wus63Imorj_2Q8jJ9BiIHNTyv38-dYrOrHIs6ctYAH8";
@@ -512,7 +512,7 @@
                     count++;
                 }
             }
-            document.getElementById("niko_Urlaubstage").innerHTML = 'Niko ' + '(' + (40 - count) + ')'
+            document.getElementById("niko_Urlaubstage").innerHTML = 'Niko ' + '(' + (82 - count) + ')'
 
 
 
@@ -739,6 +739,8 @@
 
         <Div class="form1Div1">
             <label class="label_form1" for="">Textfeld</label>
+            <!-- vorbereitung für Text in farben -->
+
             <!-- <button class="Button_form1_farbe rot" onclick="(() => { event.preventDefault() })()">rot</button>
             <button class="Button_form1_farbe blau" onclick="(() => { event.preventDefault() })()">blau</button>
             <button class="Button_form1_farbe lila" onclick="(() => { event.preventDefault() })()">lila</button>
