--- a/Login.html
+++ b/Login.html
@@ -32,7 +32,8 @@
             })
             readDB() ;
             // window.open('Index.html', '_blank');
-            window.location.href = "Index.html";
+            //window.location.href = "Index.html";
+            window.open('Index.html');
 
         }
 
