login weiterleitung umbenannt

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             readDB() ;
             // window.open('Index.html', '_blank');
             //window.location.href = "Index.html";
-            window.open('Index.html');
+            window.open('index2.html');
 
         }
 
