--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                 password: pw_id,
             })
             readDB() ;
-            // window.open('Index.html', '_blank');
+            window.open('index.html', '_blank');
             //window.location.href = "Index.html";
-            window.open('index2.html');
+            //window.open('index2.html');
 
         }
 
