--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 password: pw_id,
             })
             readDB() ;
-            window.location.href = 'index2.html';
+            window.location.replace('index2.html');
             //window.open('index.html', '_blank');
             //window.location.href = "Index.html";
             //window.open('index2.html');
